# context-bucket

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_simulations.py
.github/workflows/: ci.yml
benchmark/: export_readme_charts.py  generate_cases.py  generate_comparison_report.py  generate_datasets.py  generate_html_report.py  generate_report.py  generate_variant_datasets.py  run_benchmark.py  run_summary.json  run_summary_structured.json  run_summary_unstructured.json
benchmark/datasets/: adversarial_dataset.jsonl  adversarial_structured.jsonl  adversarial_unstructured.jsonl  base_dataset.jsonl  base_structured.jsonl  base_unstructured.jsonl  medical_dataset.jsonl  medical_structured.jsonl  medical_unstructured.jsonl  perturbed_dataset.jsonl  perturbed_structured.jsonl  perturbed_unstructured.jsonl
benchmark/html_parts/: comparison_css.html  comparison_template.html  css.html  template.html
context_bucket/: __init__.py  assembly.py  audit.py  benchmark.py  cli.py  evaluation.py  importers.py  ingest.py  models.py  preferences.py  retrieval.py  service.py  settings.py  storage.py  structured.py  task_envelope.py  training.py
examples/: quickstart.py  workflows.py
tests/: test_benchmark.py  test_cli.py  test_models.py  test_retrieval.py  test_service.py  workflow_fixtures.py
