[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-bucket"
version = "0.2.0"
description = "Local-first context storage and retrieval for AI applications."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[project.scripts]
context-bucket = "context_bucket.cli:main"

[tool.setuptools]
packages = ["context_bucket"]

[tool.pytest.ini_options]
testpaths = ["tests"]
